# stellar-one-click-playground

./: .gitignore  package-lock.json  vendor-cargo-deps.sh  vendor-rust.sh
api/hello-soroban/: deploy.sh
backend/: .env  Cargo.toml  add_files.sh  demo.wasm  package-lock.json  test_files.sh
backend/src/: app.rs  main.rs  state.rs
backend/src/models/: file.rs  project.rs
backend/src/routes/: build.rs  file.rs  mod.rs  project.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.css  App.jsx  defaultTemplates.jsx  index.css
frontend/src/components/: BuildPanel.css  BuildPanel.jsx  ContractEditor.css  ContractEditor.jsx  ErrorBoundary.css  ErrorBoundary.jsx  FileSidebar.css  FileSidebar.jsx  Terminal.css  Terminal.jsx
frontend/src/hooks/: useCustomHooks.js
frontend/src/utils/: buildApi.js  fileUtils.js
runner/: Dockerfile
runner/scripts/: deploy.sh  run.sh  vendor-deps.sh
runner/templates/hello-soroban/: Cargo.toml
runner/templates/hello-soroban/src/: lib.rs
