[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }   # <-- "serde" is REQUIRED!
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = "0.4"