[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }   # <-- "serde" is REQUIRED!
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = "0.4"

# New deps for build endpoint
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }
tempfile = "3"
anyhow = "1.0"
base64 = "0.21"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "fs", "time"] }